# Tutorial

./: .gitignore  README.md  pyproject.toml  run.py
00-Python-Conda-Setup/: README.md
01-ChimeraPy-Intro/: README.md
02-Installation/: README.md
03-Packaging/: README.md
03-Packaging/chimerapy-tutorial/: README.md  pyproject.toml
04-CustomNodes/: README.md
04-CustomNodes/chimerapy-tutorial/: pyproject.toml
04-CustomNodes/chimerapy-tutorial/chimerapy_tutorial/: show_node.py
05-PipelineCLI/: README.md
05-PipelineCLI/chimerapy-tutorial/: pyproject.toml
05-PipelineCLI/chimerapy-tutorial/chimerapy_tutorial/: __init__.py  video_node.py
06-PackagingYOLO/: README.md
06-PackagingYOLO/chimerapy-tutorial/: pyproject.toml
06-PackagingYOLO/chimerapy-tutorial/chimerapy_tutorial/: __init__.py  data.py  video_node.py  yolo.py
06-PackagingYOLO/chimerapy-tutorial/orchestration-configs/: video-show.json  yolo.json
08-Full/: README.md  run.py
08-Full/chimerapy_tutorial/: data.py
chimerapy_tutorial/: __init__.py  web_and_screen.py  yolo.py
orchestration-configs/: video-show.json  yolo.json
