[project]
name = "chimerapy-tutorial"
version = "0.0.1"
description = "Tutorial for ChimeraPy"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">3.8"

keywords = ["education", "multimodal", "data", "learning", "analytics"]

classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    'numpy',
    'imutils',
    'pillow',
    'dxcam; sys_platform == "win32"',
    'seaborn',
    'requests',
    'chimerapy @ git+https://github.com/oele-isis-vanderbilt/ChimeraPy@main#egg=chimerapy',
    'chimerapy-orchestrator @ git+https://github.com/oele-isis-vanderbilt/ChimeraPyOrchestrator@main#egg=chimerapy_orchestrator',
]

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-repeat',
    'pytest-lazy-fixture',
    'pytest-rerunfailures',
    'pre-commit',
]

[project.urls]
homepath = "https://github.com/oele-isis-vanderbilt/ChimeraPyTutorial"
documentation = "https://github.com/oele-isis-vanderbilt/ChimeraPyTutorial"
repository = "https://github.com/oele-isis-vanderbilt/ChimeraPyTutorial"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]


[project.entry-points."chimerapy_orchestrator.nodes_registry"]
get_nodes_registry = "chimerapy_tutorial:register_nodes_metadata"

# Reference:
# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
[tool.pytest.ini_options]

# Logging + CLI
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout
faulthandler_timeout=300

# Ignore warnings
filterwarnings = "ignore::DeprecationWarning"
